# fabric

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  FOUNDATION-NOTE.md  README.md
agents/: agent-model.yaml
api/: server.py
applications/: application-model.yaml
capabilities/: capability-model.yaml
codegen/: generate_models.py
constraints/: constraint-model.yaml  tool-validity-constraints.yaml
credentials/: credential-model.yaml
datasets/: dataset-model.yaml
devices/: device-model.yaml
docs/: agent-marketplace.md  cyberark-data-model-mapping.md  okta-data-model-mapping.md  proof-cross-vendor-resolution.md  sailpoint-data-model-mapping.md  surrealdb-feature-map.md
events/: event-model.yaml
evidence/: evidence-model.yaml
fabric-db/: Cargo.toml  README.md
fabric-db/src/: main.rs
features/: customer-feedback-collector-features.yaml  feature-model.yaml
field-groups/: fieldgroup-model.yaml
groups/: group-model.yaml
identities/: identity-model.yaml
locations/: location-model.yaml
markets/: market-model.yaml
meta/: feature-lifecycle.yaml  primitive-schema.yaml
metrics/: metric-model.yaml
objectives/: objective-model.yaml
permissions/: permission-model.yaml
pipelines/: pipeline-model.yaml
policies/: policy-model.yaml  tool-validity-policy.yaml
products/: customer-feedback-collector-model.yaml
protocols/: protocol-model.yaml
relationships/: relationship-model.yaml
roles/: role-model.yaml
runtime/: README.md  agent.go  agent_test.go  domain.go  go.mod  graph.go  graph_test.go  log.go  main.go  mcp.go  mcp_test.go  model.go  (+11 more)
(+191 files in other folders)
