[package]
name = "fabric-db"
version = "0.1.0"
edition = "2021"
description = "Fabric DB — the SurrealDB-backed engine for the OpenDataWorld data model."

[dependencies]
surrealdb = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
